# autos

./: .env.production.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d5e4a889d3a_initial_schema.py  6436173e100f_add_email_to_users.py  6e5490901a2c_add_task_types_table.py  841210aff9fd_add_is_admin_and_vehicle_owner.py  b19218d3ba5a_add_fuel_logs.py  d36107970598_add_intervalo_km_e_intervalo_meses_a_.py  ff9cd7ece752_add_carga_anterior_registrada_to_fuel_.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/core/: deps.py  security.py
backend/app/routers/: admin_users.py  attachments.py  auth.py  dashboard.py  fuel_logs.py  maintenance_tasks.py  stats.py  vehicles.py
backend/app/scripts/: create_user.py
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AdminRoute.tsx  AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: Header.tsx
frontend/src/components/charts/: BarChart.tsx  GroupedBarChart.tsx  LineChart.tsx  chartColors.ts  (+2 more)
frontend/src/pages/: DashboardPage.tsx  FuelLogFormPage.tsx  LoginPage.tsx  MaintenanceTaskFormPage.tsx  RegisterPage.tsx  TaskTypesPage.tsx  VehicleDetailPage.tsx  VehicleFormPage.tsx  VehicleListPage.tsx  VehicleStatsPage.tsx
frontend/src/theme/: ThemeContext.tsx  ThemeToggle.tsx
frontend/src/types/: index.ts
(+2 files in other folders)
